# sonido

./: Cargo.toml  README.md  deny.toml  netlify.toml
.cargo/: config.toml
.claude/commands/: add-effect.md  doc-verify.md  golden-regen.md
.claude/context/: analysis-dsp.md  cli-graph-dsl.md  daisy-embedded.md  plugin-clap.md
.github/workflows/: ci-manual.yml  release.yml
crates/sonido-analysis/src/: ir.rs  lib.rs  loudness.rs  pitch.rs  stereo.rs
crates/sonido-cli/src/: effects.rs
crates/sonido-cli/tests/: integration.rs
crates/sonido-config/: Cargo.toml
crates/sonido-config/src/: lib.rs  preset.rs  validation.rs
crates/sonido-core/: Cargo.toml
crates/sonido-core/src/: biquad.rs  cached.rs  compose.rs  effect.rs  gain.rs  lib.rs  loop_buffer.rs  macro_map.rs  math.rs  (+2 more)
crates/sonido-daisy/: Cargo.toml
crates/sonido-io/: Cargo.toml
crates/sonido-io/src/: backend.rs  cpal_backend.rs  lib.rs
crates/sonido-io/tests/: integration.rs
crates/sonido-plugin/: Cargo.toml
demos/: README.md
docs/: ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLI_GUIDE.md  CLI_TESTING.md  CONTRIBUTING.md  DAISY_SEED.md  DESIGN_DECISIONS.md  DOC_CODE_MAPPING.md  DSP_FUNDAMENTALS.md  DSP_QUALITY_STANDARD.md  EFFECTS_REFERENCE.md  EFFECT_SDK.md  EMBEDDED.md  GETTING_STARTED.md  GUI.md  KERNEL_ARCHITECTURE.md  KERNEL_MIGRATION.md  KERNEL_SPEC.md  LIBRARY_TESTING.md  ROADMAP.md  TESTING.md
docs/plans/: 2026-03-07-embedded-docs-update.md  2026-03-08-arcade-cabinet-layout-v2.md
presets/: README.md
scripts/: generate_demos.sh  measure_all.sh  smoke_test.sh  walkthrough.sh
(+173 files in other folders)
