[package]
name = "sonido-io"
description = "Audio I/O layer for Sonido DSP framework"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
## Enable JACK audio backend support via cpal's jack feature.
## Requires the JACK development libraries installed on the system.
jack = ["cpal/jack"]
## Enable ASIO audio backend support on Windows via cpal's asio feature.
## Requires the ASIO SDK to be installed. See cpal docs for setup instructions.
asio = ["cpal/asio"]

[dependencies]
sonido-core = { workspace = true, features = ["std", "tracing"] }
cpal.workspace = true
hound = { workspace = true }
thiserror = { workspace = true }
tracing.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
sonido-effects = { workspace = true, features = ["std"] }
